[package]

name = "lea"
version = "0.0.1"
authors = ["Jonas Schievink <jonas@schievink.net>"]
repository = "https://github.com/jonas-schievink/lea"
documentation = "https://jonas-schievink.github.io/lea/lea/index.html"
readme = "README.md"
license = "MIT"
description = """
A Lua-based language written in Rust
"""

[dependencies]
peg = "*"
rustc-serialize = "*"
lazy_static = "*"
term = "*"
unicode-segmentation = "*"
