[package]

name = "lea"
version = "0.0.1"
authors = ["Jonas Schievink <jonas@schievink.net>"]
repository = "https://github.com/jonas-schievink/lea"
documentation = "https://jonas-schievink.github.io/lea/lea/index.html"
readme = "README.md"
license = "MIT"
description = """
A Lua-based language written in Rust
"""

[lib]
name = "lea"
path = "src/lea/lib.rs"

[dependencies]
lea-parser = { path = "src/lea-parser" }
lea-compiler = { path = "src/lea-compiler" }
lea-vm = { path = "src/lea-vm" }
lea-liblang = { path = "src/liblang" }
docopt = { git = "https://github.com/docopt/docopt.rs" }
docopt_macros = { git = "https://github.com/docopt/docopt.rs" }
rustc-serialize = "0.3"
bincode = "0.4"
term = "0.2"
