[package]

name = "lea-compiler"
version = "0.0.1"
authors = ["Jonas Schievink <jonas@schievink.net>"]

[lib]
name = "lea_compiler"
path = "lib.rs"

[dependencies]
peg = "*"
rustc-serialize = "*"
lazy_static = "*"
term = "*"
unicode-segmentation = "*"
log = "*"

[dependencies.lea-core]
path = "../lea-core"

[dependencies.lea-ast]
path = "../lea-ast"
