[package]
name = "lea-compiler"
version = "0.0.1"
authors = ["Jonas Schievink <jonas@schievink.net>"]
license = "Apache-2.0/MIT"

[lib]
name = "lea_compiler"
path = "lib.rs"

[dependencies]
rustc-serialize = "0.3"
lazy_static = "0.1"
term = "0.2"
log = "0.3"
lea-core = { path = "../lea-core" }
lea-parser = { path = "../lea-parser" }
