[package]

name = "lea-parser"
version = "0.0.1"
authors = ["Jonas Schievink <jonas@schievink.net>"]

[lib]
name = "lea_parser"
path = "lib.rs"

[dependencies]
term = "0.2"
unicode-segmentation = "0.1"
peg = { git = "https://github.com/kevinmehall/rust-peg.git" }
lea-core = { path = "../lea-core" }
