[package]

name = "lea-parser"
version = "0.0.1"
authors = ["Jonas Schievink <jonas@schievink.net>"]
build = "build.rs"

[lib]
name = "lea_parser"
path = "lib.rs"

[dependencies]
term = "0.2"
unicode-segmentation = "0.1"
lea-core = { path = "../lea-core" }
lalrpop-util = "0.7"

[build-dependencies]
lalrpop = "0.7"
