[package]

name = "lea"
version = "0.0.1"
authors = ["Jonas Schievink <jonas@schievink.net>"]
repository = "https://github.com/jonas-schievink/lea"
documentation = "https://jonas-schievink.github.io/lea/lea/index.html"
readme = "README.md"
license = "MIT"
description = """
A Lua-based language written in Rust
"""

[lib]
name = "lea"
path = "lib.rs"

[dependencies.lea-compiler]
path = "../lea-compiler"

[dependencies.vm]
path = "../vm"
